--- a/admin/data-buku.html
+++ b/admin/data-buku.html
@@ -13,7 +13,7 @@
         <div class="logo">
           <a href="/">Perpustakaan Kartini</a>
         </div>
-        
+
         <div class="toggle-icon" onclick="toggleSidebar()"></div>
         <!-- <div class="toggle-icon" onclick="toggleSidebar()"></div> -->
         <div class="icon">
@@ -23,7 +23,8 @@
                 src="/assets/icon/user.png"
                 style="width: 12px; height: 12px; display: flex"
                 alt="Petugas Icon"
-                class="icon-petugas" />
+                class="icon-petugas"
+              />
               Petugas
             </button>
             <div class="dropdown-child" id="submenu">
@@ -31,12 +32,14 @@
               <a href="/"
                 ><img
                   src="/assets/icon/user.png"
-                  style="width: 12px; height: 12px" />Profile</a
+                  style="width: 12px; height: 12px"
+                />Profile</a
               >
               <a href="/"
                 ><img
                   src="/assets/icon/power-off.png"
-                  style="width: 12px; height: 12px" />Logout</a
+                  style="width: 12px; height: 12px"
+                />Logout</a
               >
             </div>
           </div>
@@ -58,14 +61,16 @@
               border: 1px solid black;
               border-radius: 50%;
             "
-            alt="Petugas Icon" />
+            alt="Petugas Icon"
+          />
           <p style="padding-top: 10px">Rafli Hada Setiawan</p>
         </div>
         <ul class="menu-admin">
           <li class="menu-dropdown">
             <a
               href="index.html"
-              class="menu-admin-active dropdown-toggle no-caret">
+              class="menu-admin-active dropdown-toggle no-caret"
+            >
               <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
               Dashboard
             </a>
@@ -123,12 +128,25 @@
         </ul>
       </div>
 
-      <div class="main-data">
+      <div class="main-data active relative">
         <div class="main-data-top">
           <h3>Data Buku</h3>
           <div
             class="container-left table-swipe table-container"
-            style="width: 100%; padding-bottom: 10px">
+            style="width: 100%"
+          >
+            <div class="input-search">
+              <div class="input-search-bt">
+                <input
+                  type="text"
+                  style="width: 140px"
+                  placeholder="Cari Buku"
+                />
+                <button type="submit" style="margin-left: 5px">
+                  <img src="/assets/icon/search.png" />
+                </button>
+              </div>
+            </div>
             <table>
               <thead>
                 <tr>
@@ -188,8 +206,21 @@
       });
       function toggleSidebar() {
         var sidebar = document.querySelector(".sidebar");
-        sidebar.style.display =
-          sidebar.style.display === "none" ? "block" : "none";
+        var mainData = document.querySelector(".main-data");
+        var relative = document.querySelector(".relative");
+        if (sidebar.style.display === "none") {
+          sidebar.style.display = "block";
+          relative.style.position = "relative";
+          relative.style.zIndex = "-1";
+          relative.style.maxWidth = "48%";
+          mainData.classList.add("active"); // Menambahkan class "active" saat sidebar muncul
+        } else {
+          sidebar.style.display = "none";
+          relative.style.position = "static";
+          relative.style.zIndex = "1";
+          relative.style.maxWidth = "100%";
+          mainData.classList.remove("active"); // Menghapus class "active" saat sidebar disembunyikan
+        }
       }
     </script>
   </body>
