--- a/peminjaman-buku.html
+++ b/peminjaman-buku.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perpustakaan Kartini - Kunjungan</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body background="/assets/icon/page-background.png">
+  <body background="./assets/icon/page-background.png">
     <!-- NAVBAR -->
     <div class="navbar">
       <div class="wrapper">
@@ -21,9 +21,9 @@
           </ul>
         </div>
         <div class="icon">
-          <a href="/"><img src="/assets/icon/envelope-solid.svg" alt="" /></a>
-          <a href="/login.html"
-            ><img src="/assets/icon/person-circle.svg" alt=""
+          <a href="/"><img src="./assets/icon/envelope-solid.svg" alt="" /></a>
+          <a href="./login.html"
+            ><img src="./assets/icon/person-circle.svg" alt=""
           /></a>
         </div>
       </div>
@@ -44,7 +44,7 @@
                   <th width="250px">Buku</th>
                   <th width="120px">Tanggal Peminjaman</th>
                   <th width="120px">Tanggal Kembali (Maks)</th>
-                  <th width="300px">Keterangan</th>
+                  <th width="200px">Keterangan</th>
                 </tr>
               </thead>
               <tbody>
@@ -52,25 +52,9 @@
                   <td style="text-align: center">1</td>
                   <td>Rafli Hada Setiawan</td>
                   <td>Sebuah Seni untuk Berbicara</td>
-                  <td>10 Juli 2023</td>
-                  <td>13 Juli 2023</td>
-                  <td>Meminjam</td>
-                </tr>
-                <tr>
-                  <td>20</td>
-                  <td>Rafli Hada Setiawan</td>
-                  <td>Sebuah Seni untuk Berbicara</td>
-                  <td>10 Juli 2023</td>
-                  <td>13 Juli 2023</td>
-                  <td>Meminjam</td>
-                </tr>
-                <tr>
-                  <td>100</td>
-                  <td>Rafli Hada Setiawan</td>
-                  <td>Sebuah Seni untuk Berbicara</td>
-                  <td>10 Juli 2023</td>
-                  <td>13 Juli 2023</td>
-                  <td>Meminjam</td>
+                  <td style="text-align: center">10 Juli 2023</td>
+                  <td style="text-align: center">13 Juli 2023</td>
+                  <td style="text-align: center">Meminjam</td>
                 </tr>
               </tbody>
             </table>
