--- a/admin/data-anggota.html
+++ b/admin/data-anggota.html
@@ -13,7 +13,7 @@
         <div class="logo">
           <a href="/">Perpustakaan Kartini</a>
         </div>
-        
+
         <div class="toggle-icon" onclick="toggleSidebar()"></div>
         <!-- <div class="toggle-icon" onclick="toggleSidebar()"></div> -->
         <div class="icon">
@@ -23,7 +23,8 @@
                 src="/assets/icon/user.png"
                 style="width: 12px; height: 12px; display: flex"
                 alt="Petugas Icon"
-                class="icon-petugas" />
+                class="icon-petugas"
+              />
               Petugas
             </button>
             <div class="dropdown-child" id="submenu">
@@ -31,12 +32,14 @@
               <a href="/"
                 ><img
                   src="/assets/icon/user.png"
-                  style="width: 12px; height: 12px" />Profile</a
+                  style="width: 12px; height: 12px"
+                />Profile</a
               >
               <a href="/"
                 ><img
                   src="/assets/icon/power-off.png"
-                  style="width: 12px; height: 12px" />Logout</a
+                  style="width: 12px; height: 12px"
+                />Logout</a
               >
             </div>
           </div>
@@ -58,14 +61,16 @@
               border: 1px solid black;
               border-radius: 50%;
             "
-            alt="Petugas Icon" />
+            alt="Petugas Icon"
+          />
           <p style="padding-top: 10px">Rafli Hada Setiawan</p>
         </div>
         <ul class="menu-admin">
           <li class="menu-dropdown">
             <a
               href="index.html"
-              class="menu-admin-active dropdown-toggle no-caret">
+              class="menu-admin-active dropdown-toggle no-caret"
+            >
               <img src="/assets/icon/dashboard.png" alt="Dashboard Icon" />
               Dashboard
             </a>
@@ -123,10 +128,18 @@
         </ul>
       </div>
 
-      <div class="main-data">
+      <div class="main-data active relative">
         <div class="main-data-top table-container">
           <h3>Data Anggota</h3>
           <div class="container-left table-swipe" style="width: 100%">
+            <div class="input-search">
+              <div class="input-search-bt">
+                <input type="text" style="width: 140px;" placeholder="Cari Anggota" />
+                <button type="submit" style="margin-left: 5px;">
+                  <img src="/assets/icon/search.png" />
+                </button>
+              </div>
+            </div>
             <table>
               <thead>
                 <tr>
@@ -145,20 +158,19 @@
                 <tr>
                   <td style="text-align: center">1</td>
                   <td>5302420030</td>
-                  <td>Rafli Hada Setiawan</td>
+                  <td><a href="./detail-anggota.html" class="direct-data-anggota"><img src="../assets/icon/user.png" style="width: 13px; padding-right: 5px;">Rafli Hada Setiawan</a></td>
                   <td>raflijr47@gmail.com</td>
                   <td>raflihs_</td>
                   <td style="text-align: center">XII MIPA 3</td>
                   <td style="text-align: center">L</td>
                   <td>RT 2/5 Karanganyar, Kebumen</td>
-                  <td style="text-align: center">
-                    <img src="../assets/icon/pen.png" style="width: 25px" />
-                    <img src="../assets/icon/delete.png" style="width: 25px" />
+                  <td style="text-align: center;">
+                    <img src="../assets/icon/pen.png" style="width: 25px; padding-right: 3px;" />
+                    <img src="../assets/icon/delete.png" style="width: 25px; padding-left: 3px;" />
                   </td>
                 </tr>
               </tbody>
             </table>
-
           </div>
         </div>
       </div>
@@ -191,8 +203,23 @@
       });
       function toggleSidebar() {
         var sidebar = document.querySelector(".sidebar");
-        sidebar.style.display =
-          sidebar.style.display === "none" ? "block" : "none";
+        var mainData = document.querySelector(".main-data");
+        var relative = document.querySelector(".relative");
+        var inputSearch = document.querySelector(".input-search-bt");
+        if (sidebar.style.display === "none") {
+          // inputSearch.style.width = "40%"
+          sidebar.style.display = "block";
+          relative.style.position = "relative";
+          relative.style.zIndex = "-1";
+          relative.style.maxWidth = "48%";
+          mainData.classList.add("active"); // Menambahkan class "active" saat sidebar muncul
+        } else {
+          sidebar.style.display = "none";
+          relative.style.position = "static";
+          relative.style.zIndex = "1";
+          relative.style.maxWidth = "100%";
+          mainData.classList.remove("active"); // Menghapus class "active" saat sidebar disembunyikan
+        }
       }
     </script>
   </body>
