--- a/admin/input-anggota.html
+++ b/admin/input-anggota.html
@@ -13,8 +13,8 @@
         <div class="logo">
           <a href="/">Perpustakaan Kartini</a>
         </div>
+
         <div class="toggle-icon" onclick="toggleSidebar()"></div>
-      
         <!-- <div class="toggle-icon" onclick="toggleSidebar()"></div> -->
         <div class="icon">
           <div class="dropdown">
@@ -23,7 +23,8 @@
                 src="/assets/icon/user.png"
                 style="width: 12px; height: 12px; display: flex"
                 alt="Petugas Icon"
-                class="icon-petugas" />
+                class="icon-petugas"
+              />
               Petugas
             </button>
             <div class="dropdown-child" id="submenu">
@@ -31,18 +32,19 @@
               <a href="/"
                 ><img
                   src="/assets/icon/user.png"
-                  style="width: 12px; height: 12px" />Profile</a
+                  style="width: 12px; height: 12px"
+                />Profile</a
               >
               <a href="/"
                 ><img
                   src="/assets/icon/power-off.png"
-                  style="width: 12px; height: 12px" />Logout</a
+                  style="width: 12px; height: 12px"
+                />Logout</a
               >
             </div>
           </div>
         </div>
       </div>
-    
     </div>
     <!-- END NAVBAR -->
 
