--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perpustakaan Kartini</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body background="assets/icon/page-background.png">
+  <body background="./assets/icon/page-background.png">
     <!-- NAVBAR -->
     <div class="navbar">
       <div class="wrapper">
@@ -21,8 +21,8 @@
           </ul>
         </div>
         <div class="icon">
-          <a href="/"><img src="/assets/icon/envelope-solid.svg" alt="" /></a>
-          <a href="login.html"><img src="/assets/icon/person-circle.svg" alt="" /></a>
+          <a href="/"><img src="./assets/icon/envelope-solid.svg" alt="" /></a>
+          <a href="login.html"><img src="./assets/icon/person-circle.svg" alt="" /></a>
         </div>
       </div>
     </div>
@@ -31,7 +31,7 @@
     <!-- MAIN -->
     <div class="main">
       <div class="content">
-        <img src="/assets/icon/logo.png" style="width: 30%" />
+        <img src="./assets/icon/logo.png" style="width: 30%" />
         <h2>Selamat Datang di Perpustakaan Kartini</h2>
         <div class="main-list">
           <a href="peminjaman-buku.html" class="tombol-main-list">Peminjaman</a>
